--- a/merchantqna-app/package.json
+++ b/merchantqna-app/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@arco-design/web-react": "^2.66.8",
     "axios": "^1.13.2",
+    "classnames": "^2.5.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
