--- a/merchantqna-app/package.json
+++ b/merchantqna-app/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@arco-design/web-react": "^2.66.8",
+    "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.13.2",
     "classnames": "^2.5.1",
+    "echarts": "^6.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.6",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
