--- a/merchantqna-backend/.gitignore
+++ b/merchantqna-backend/.gitignore
@@ -17,6 +17,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# 环境变量文件
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # 构建输出
 dist
 dist-ssr
