--- a/merchantqna-backend/package.json
+++ b/merchantqna-backend/package.json
@@ -18,14 +18,26 @@
   "license": "MIT",
   "type": "commonjs",
   "dependencies": {
+    "@lancedb/lancedb": "^0.22.3",
+    "@langchain/openai": "^1.1.3",
+    "@opendocsg/pdf2md": "^0.2.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.11.0",
+    "markdown": "^0.5.0",
     "nodemailer": "^7.0.10",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.5",
+    "pdf2md": "^1.0.2",
     "pg": "^8.16.3",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
