--- a/merchantqna-app/package.json
+++ b/merchantqna-app/package.json
@@ -15,6 +15,10 @@
     "axios": "^1.13.2",
     "classnames": "^2.5.1",
     "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
+    "jspdf": "^3.0.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
