--- a/merchantqna-backend/Dockerfile
+++ b/merchantqna-backend/Dockerfile
@@ -1,14 +1,11 @@
 # 使用Node.js官方镜像作为基础镜像
-FROM node:18-alpine
+FROM node:latest
 
 # 设置工作目录
 WORKDIR /app
 
 # 复制package.json和package-lock.json文件
 COPY package*.json ./
-
-# 安装依赖
-RUN npm install
 
 # 复制项目文件
 COPY . .
