--- a/merchantqna-app/.env
+++ b/merchantqna-app/.env
@@ -1,3 +1,3 @@
-# VITE_API_BASE=http://47.102.20.117:3000/api
-VITE_API_BASE=http://localhost:3000/api
+VITE_API_BASE=http://47.102.20.117:3000/api
+# VITE_API_BASE=http://localhost:3000/api
 VITE_API_KEY=fa2540eb069942aaaf4dfaca594d8329.zZjpsakRIvIDqhT5
